src/objects/ProjectTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays only PSA resouces</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>ProjectTeamMembersContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.pse__Salesforce_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_number__c</fullName>
        <description>should be deleted</description>
        <inlineHelpText>should be deleted</inlineHelpText>
        <label>Employee Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OracleEmployeeNumber__c</fullName>
        <formula>Contact__r.pse__Salesforce_User__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePersonId__c</fullName>
        <formula>Contact__r.pse__Salesforce_User__r.PersonId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Person Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleProjectNumber__c</fullName>
        <formula>Project__r.OracleProjectnumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleProjectTeamMember_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Project Team Member Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending
T = Transfer (Success)
E = Error
S = Successful</description>
        <inlineHelpText>P = Pending
T = Transfer (Success)
E = Error
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PersonId__c</fullName>
        <label>Person Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.pse__Salesforce_User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRoleTitle__c</fullName>
        <label>Project Role Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRole__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Role</label>
        <referenceTo>ProjectRole__c</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>ProjectTeamMembersRole</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>ProjectTeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Project Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Director 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Accountant Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lead 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO or Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discipline Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS&amp;E Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User must be active</description>
        <inlineHelpText>User must be active</inlineHelpText>
        <label>Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User must be active</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>User must be active</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectTeamMemberUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xxOracleProjectNumber__c</fullName>
        <formula>Project__r.OracleProjectnumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxOracle Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxProject_ID__c</fullName>
        <label>xxProject ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Team Member</label>
    <nameField>
        <displayFormat>PTM-{0000000}</displayFormat>
        <label>Project Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <recordTypes>
        <fullName>KeyMember</fullName>
        <active>true</active>
        <label>Key Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stakeholder</fullName>
        <active>true</active>
        <label>Stakeholder</label>
    </recordTypes>
    <recordTypes>
        <fullName>TeamMember</fullName>
        <active>true</active>
        <label>Team Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>